# NOLSM

./: .gitignore  meson.build  mpi-matrix-inv.c
julia/mkl-matrix-inv_example/: run.sh  test.sh
julia/mpi-matrix-inv_example/: run.sh  test.sh
